[gd_scene load_steps=2 format=3 uid="uid://bui1l6ki836ji"]

[ext_resource type="Script" path="res://scripts/hurt_box.gd" id="1_6q34o"]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_6q34o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invicibility_ended" from="." to="." method="_on_invicibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
